Change date from server time to UTC ISO 8601
